- add RMB menu to script editor windows
- add options "clear" and "configure" in the console RMB menu, and the command log RMB menu
- add option to save workplace layout not per workspace, but at the end of the session
- add options ("printcmd") to settings
- fix help menu for detached windows
- R X11 device windows are now managed by rkward, with the following initial features:
- R X11 device windows: attach to / detach from workplace (they start detached)
- R X11 device windows: toggle between normal resize mode and (settable) fixed size with scrollbars
- R X11 device windows: menu options to copy / print / duplicate / save / activate devices
- fixed: selecting Window->Close in a detached window would only close the internal view, not the window
- when detaching a window, give it a more reasonable size
- do not open the same script url twice (instead the corresponding window is raised on the second attempt)
- fixed: when closing a detached script editor window, you would not be asked to save changes (if any)
- fixed: occasional crash when re-attaching a script editor window
- new translation: Greek, Catalan
- updated translations: German, French
- added basic plot facility for ECDF (Empirical Cumulative Distribution Function) (menu plots)
- added ptukey and qtukey (Studentized Range Distribution (Tukey)) (menu distributions)
- spelling corrections in distributions menu
- reorganized "Descriptive Statistics" plugin to use tabs for better usability
- added constant for mad in descriptive statistics plugin
- fix bug in rk.get.label ()
- in script editor, do not provide symbol name completion while in comments
- properly support active bindings in globalenv ()
- if not started in a tty, spawn a konsole. R will go into non-interactive mode otherwise

--- Version 0.4.1 - Nov-05-2006
- allow specification of title/subtitle in plot options plugin (currently used by boxplot, and histogram)
- fix bug in beta probabilities plugin